@@ -19,19 +19,17 @@ public class HandleTextBoxCheckboxRadioBtn {
 		
 		DesiredCapabilities capabilities = new DesiredCapabilities();
 		
-		   capabilities.setCapability("deviceName","OnePlus AC2001");
-	        capabilities.setCapability("platformname", "Android");     
-	        capabilities.setCapability("automationName","uiautomator2");
-	        capabilities.setCapability("platformversion", "12");
+		capabilities.setCapability("deviceName","Gangesh");
+        capabilities.setCapability("platformname", "Android");     
+        capabilities.setCapability("automationName","uiautomator2");
+        capabilities.setCapability("platformversion", "12");
 	        
 	        capabilities.setCapability("appPackage","io.appium.android.apis");
 	        capabilities.setCapability("appActivity", "io.appium.android.apis.ApiDemos");
 	        //io.appium.android.apis/io.appium.android.apis.ApiDemos
 	        
 
-	        URL url = URI.create("http://127.0.0.1:4723/").toURL();
-	        
-	        AndroidDriver driver = new AndroidDriver(url, capabilities);
+	        AndroidDriver driver = new AndroidDriver(new URL("http://127.0.0.1:4723/wd/hub"), capabilities);
 	        Thread.sleep(5000);
 	        System.out.println("Application Started");
 	        
@@ -47,18 +45,17 @@ public class HandleTextBoxCheckboxRadioBtn {
 	      
 	       //enter text in textbox
 	       //io.appium.android.apis:id/edit
-	       driver.findElement(By.id("io.appium.android.apis:id/edit")).sendKeys("prachi gupta");
-
+	       driver.findElement(By.id("io.appium.android.apis:id/edit")).sendKeys("Gangesh Mishra");
+           Thread.sleep(2000);
 	       //checkbox
 	       //io.appium.android.apis:id/check1
 	       driver.findElement(By.id("io.appium.android.apis:id/check1")).click();
-
+	       Thread.sleep(2000);
 	       
 	       //radio button
 	       driver.findElement(By.id("io.appium.android.apis:id/radio2")).click();
-
+	       Thread.sleep(2000);
 	       
-	       Thread.sleep(5000);
 	        driver.quit();//CLOSE SESSION
 	}
 
